# av_converged_communication_system_architecture

./: .gitignore  CMakeLists - Copy.txt  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  version.h.in
benchmarks/asio_node_benchmarks/: CMakeLists.txt  asio_node_benchmarks.cpp
benchmarks/grab_es_benchmarks/: CMakeLists.txt  grab_es_benchmarks.cpp
benchmarks/http_server_benchmarks/: CMakeLists.txt  http_server_benchmarks.cpp
benchmarks/storage_upload_benchmarks/: CMakeLists.txt  storage_upload_benchmarks.cpp
benchmarks/stream/: CMakeLists.txt  main.cpp  videostream.cpp  videostream.h
benchmarks/xmq_pub_benchmarks/: CMakeLists.txt  CMakelists.txt  xmq_pub_benchmarks.cpp
benchmarks/xmq_sub_benchmarks/: CMakeLists - Copy.txt  CMakeLists.txt  xmq_sub_benchmarks.cpp
modules/libasio/: CMakeLists.txt  CMakelists.txt  acceptor.cpp  acceptor.h  asio.cpp  asio.h  asio_node.cpp  asio_node.h  async_acceptor.cpp  async_acceptor.h  async_connector.cpp  async_connector.h  connector.cpp  connector.h  defs.h  io_acceptor.cpp  io_acceptor.h  io_listen.cpp  io_listen.h  io_service.cpp  io_service.h  io_session.cpp  io_session.h  libasio.cpp  libasio.h  libasio_defs.h  service.cpp  service.h  session.cpp  session.h
modules/libasio/asio/: acceptor.cpp  acceptor.h  connector.cpp  connector.h  service.cpp  service.h
modules/libasio/session/: session.cpp  session.h
modules/libasio/tcp/: tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h
modules/libasio/udp/: udp_session.cpp  udp_session.h
modules/libav/: CMakeLists.txt  av_node.cpp  av_node.h  defs.h  libav.cpp  libav.h  libav_defs.h
modules/libav/filter/: av_filter.cpp  av_filter.h
modules/libav/graph/: av_grab_bgr24_graph.cpp  av_grab_bgr24_graph.h  av_grab_es_graph.cpp  av_grab_es_graph.h  av_grab_jpeg_image_graph.cpp  av_grab_jpeg_image_graph.h  av_grab_ps_graph.cpp  av_grab_ps_graph.h  av_grab_rgb_image_graph.cpp  av_grab_rgb_image_graph.h  av_graph.cpp  av_graph.h  av_playback_graph.cpp  av_playback_graph.h  av_realplay_graph.cpp  av_realplay_graph.h  realplay_stream_bgr24_convert_graph.cpp  realplay_stream_bgr24_convert_graph.h  realplay_stream_decoder_graph.cpp  realplay_stream_decoder_graph.h  realplay_stream_grab_bgr24_graph.cpp  realplay_stream_grab_bgr24_graph.h  realplay_stream_play_graph.cpp  realplay_stream_play_graph.h  realplay_stream_render_graph.cpp  realplay_stream_render_graph.h  realplay_stream_video_analysis_graph.cpp  realplay_stream_video_analysis_graph.h
modules/libav/pin/: av_pin.cpp  av_pin.h
modules/libavcodec/: CMakeLists - Copy.txt  CMakeLists.txt  av_codec.cpp  av_codec.h  av_codec_node.cpp  av_codec_node.h  av_frame.cpp  av_frame.h  av_stream_codec.cpp  av_stream_codec.h  defs.h  libavcodec.cpp  libavcodec.h  libavcodec_defs.h
modules/libavcodec/convert/: ffmpeg_picture_convert.cpp  ffmpeg_picture_convert.h
modules/libavcodec/decode/: ffmpeg_h264_decode.cpp  ffmpeg_h264_decode.h
modules/libavcodec/encode/: ffmpeg_jpeg_encode.cpp  ffmpeg_jpeg_encode.h
modules/libavcodec/hiksdk/: hk_sdk_av_capture.cpp
modules/libavparser/: CMakeLists.txt  av_parser.cpp  av_parser.h  av_parser_node.cpp  av_parser_node.h  defs.h  libavparser.cpp  libavparser.h  libavparser_defs.h
modules/libavpkt/: CMakeLists.txt  av_pkt.cpp  av_pkt.h  defs.h  libavpkt.cpp  libavpkt.h  libavpkt_defs.h
modules/libavplayer/: CMakeLists.txt  av_player.cpp  av_player.h  av_player_node.cpp  av_player_node.h  defs.h  libavplayer.cpp  libavplayer.h
modules/libavplayer/d3d/: d3d.h  (+11 more)
modules/libavstream/: CMakeLists.txt  av_stream_filter.cpp  av_stream_filter.h  av_stream_graph.cpp  av_stream_graph.h  av_stream_pin.cpp  av_stream_pin.h  avstream_node.cpp  avstream_node.h  defs.h
modules/libdatabase/: CMakeLists.txt  database.cpp  database.h  database_node.cpp  database_node.h  defs.h
modules/libdvs/: CMakeLists.txt  defs.h  device.cpp  device.h  dvs_node.cpp  dvs_node.h  libdvs.cpp  libdvs.h  libdvs_defs.h
modules/libdvshost/: CMakeLists.txt  camera.cpp  camera.h  defs.h  device.cpp  device.h  dvs_host_creator.cpp  dvs_host_creator.h  stream.cpp  stream.h
modules/libfdfs/: CMakeLists.txt  libfdfs.cpp  libfdfs.h
modules/libfilelog/: CMakeLists.txt  libfilelog.cpp  libfilelog.h
modules/libhttp/: CMakeLists.txt  defs.h  http_node.cpp  http_node.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  http_session_node.cpp  http_session_node.h  libhttp.cpp  libhttp.h  libhttp_defs.h
modules/liblog/: CMakeLists.txt  CMakelists.txt  file_log.cpp  file_log.h  log.cpp  log.h
modules/libxmq/: CMakeLists.txt  CMakelists.txt  async_node.cpp  async_node.h  ctx.cpp  ctx.h  data_pub.cpp  data_pub.h  data_sub.cpp  data_sub.h  defs.h  libxmq.cpp  libxmq.h  libxmq_defs.h  msg.cpp  msg.h  publisher.cpp  publisher.h  router.cpp  router.h  service_discover.cpp  service_discover.h  service_vendor.cpp  service_vendor.h  subscriber.cpp  subscriber.h  switcher.cpp  switcher.h  worker.cpp  worker.h  xmq_node.cpp  xmq_node.h  xmq_role.cpp  xmq_role.h
samples/libvideo_encode_image/: CMakeLists.txt  CMakelists.txt  JPEGImageEncoder.cpp  JPEGImageEncoder.h  dvs.cpp  dvs.h  libvideo_encode_image.cpp  libvideo_encode_image.h
services/database_host_server/: CMakeLists.txt  database_host_server.cpp  database_host_server.h  main.cpp
services/dvs_host_server/: CMakeLists.txt  dvs_host_server.cpp  dvs_host_server.h  dvs_host_session.cpp  dvs_host_session.h  dvs_stream_session.cpp  dvs_stream_session.h  main.cpp  server.cpp  server.h  session.cpp  session.h
services/http_flv_host_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
services/http_flv_service/: CMakeLists.txt  CMakelists.txt  http_flv_stream_server.cpp  http_flv_stream_server.h  http_flv_stream_session.cpp  http_flv_stream_session.h  main.cpp
services/http_flv_stream_server/: CMakeLists.txt  http_flv_stream_server.cpp  http_flv_stream_server.h  http_flv_stream_session.cpp  http_flv_stream_session.h  main.cpp
services/http_host_server/: CMakeLists.txt  http_api_list.h  http_host_server.cpp  http_host_server.h  main.cpp  server.cpp  server.h
(+559 files in other folders)
